# burn_bdh

./: .gitignore  Cargo.toml  README.md
bench/: inference.rs  train.rs
config/: base.toml  large.toml  small.toml
src/: generation.rs  lib.rs  train.rs  wgpu.rs
src/config/: mod.rs
src/dataset/: factory.rs  huggingface.rs  mod.rs  scheduler.rs  shakespeare.rs
src/kernel/: block_sparse.rs  linear_attention.rs  mod.rs  relu_lowrank.rs
src/model/: attention.rs  bdh.rs  config.rs  loss.rs  mod.rs  router.rs  state.rs
src/tokenizer/: byte.rs  char_vocab.rs  mod.rs
src/tools/: mod.rs
tests/: dataset_tests.rs  fused_kernel_tests.rs  training_step_tests.rs
