[package]
name = "burn_dragon_hatchling"
description = "burn (baby) dragon hatchling inference and training"
version = "0.1.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "bdh",
  "language-model",
  "machine-learning",
]
categories = [
  "compression",
  "science",
  "science::neuroscience",
]
homepage = "https://github.com/mosure/burn_bdh"
repository = "https://github.com/mosure/burn_bdh"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "train"


[features]
default = ["cuda"]

benchmark = ["burn/autotune", "burn/fusion"]
cuda = ["burn/cuda", "burn-cuda"]


[dependencies]
toml = "0.9"
rand = "0.8"
ureq = { version = "2.9", features = ["tls"] }
burn-ndarray = "0.18"
burn-autodiff = "0.18"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"


[dependencies.burn]
version = "0.18"
default-features = true
features = [
  # "autotune",
  "fusion",
  "ndarray",
  "std",
  # "vulkan",
  # "webgpu",
  "wgpu",
  "cuda",
]

[dependencies.burn-wgpu]
version = "0.18"
default-features = true
features = [
  "fusion",
  "std",
  # "template",
]

[dependencies.cubecl]
version = "0.6"
default-features = true
features = [
  # "autotune-checks",
  # "linalg",
  "std",
  # "template",
  # "wgpu",
  # "wgpu-spirv",
]

[dependencies.cubecl-runtime]
version = "0.6"
default-features = true
features = [
  # "autotune-checks",
  # "channel-cell",
  "channel-mpsc",
  # "channel-mutex",
  "std",
  # "storage-bytes",
]

[dependencies.burn-train]
version = "0.18"
default-features = false
features = [
  "tui",
]

[dependencies.tracing]
version = "0.1"

[dependencies.burn-cuda]
version = "0.18"
optional = true
default-features = false
features = [
  "fusion",
  "std",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }
tempfile = "3"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[[bench]]
name = "inference"
harness = false
path = "bench/inference.rs"

[[bench]]
name = "train"
harness = false
path = "bench/train.rs"
